# hdk-assemblyscript

./: .gitignore  README.md  function-template-generator.js  index.ts  jsmn-interop.d.ts  jsmn-interop.ts  jsmn-reference.ts  jsmn-test.ts  json.ts  package-lock.json  package.json  parsers.ts  stringify.ts  types.ts  utils.ts  zome-functions-transform.js
examples/appSpec/: .gitignore  .hcignore  Cargo.toml  README.md  app.json  build-and-test.sh  test.sh
examples/appSpec/src/: main.rs
examples/appSpec/test/: README.md  index.js  test-helper.js
examples/appSpec/zomes/four/: zome.json
examples/appSpec/zomes/four/capabilities/main/: autogen.zome.json
examples/appSpec/zomes/four/code/: .build  index.ts  package-lock.json  package.json
examples/appSpec/zomes/three/capabilities/main/: autogen.zome.json  zome.json
examples/appSpec/zomes/three/capabilities/main/code/: .build  .gitignore  example-get-response.json  index.ts  package-lock.json  package.json  tsconfig.json
examples/appSpec/zomes/three/capabilities/other_capability/: autogen.zome.json
examples/appSpec/zomes/three/code/: .build  .gitignore  index.ts  package-lock.json  package.json  tsconfig.json
examples/appSpec/zomes/three/entry_types/message/: message.json
tests/: test_template_generator.js  test_zome_functions_transform.js
transforms/: can_stringify.js  capability.js  decorator-deserializable.js  function-template-generator.js  index.js  serializable.js  unmarshal-helpers.js  unmarshal-helpers.ts  zome_function.js
