[package]
name = "word"
version = "0.1.0"
authors = ["Connor Turland <connorturland@gmail.com>"]

[dependencies]
test_utils = { path = "../../..//holochain-rust/test_utils" }
holochain_core_api = { path = "../../../holochain-rust/core_api" }
holochain_core = { path = "../../../holochain-rust/core" }
holochain_dna = { path = "../../../holochain-rust/dna" }
