[package]
name = "word"
version = "0.1.0"
authors = ["Connor Turland <connorturland@gmail.com>"]

[dependencies]
serde = "1.0.79"
serde_json = "1.0.30"
serde_derive = "1.0.79"
test_utils = { git = "https://github.com/holochain/holochain-rust", branch = "develop" }
holochain_core_api = { git = "https://github.com/holochain/holochain-rust", branch = "develop" }
holochain_core = { git = "https://github.com/holochain/holochain-rust", branch = "develop" }
holochain_dna = { git = "https://github.com/holochain/holochain-rust", branch = "develop" }
